added steps to build tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,16 @@ jobs:
             # Shell script to print the version
             - run: go version
 
+            - name: Build
+              run: go build -v ./...
+            
+            - name: Test
+              run: go test ./...
+
+
+            
+
+
+
 
       
