--- a/internal/greeting/.github/workflows/build.yml
+++ b/internal/greeting/.github/workflows/build.yml
@@ -3,19 +3,23 @@ on:
 
 jobs:
   build:
+    permissions:
+      packages: write
     runs-on: 'ubuntu-latest'
     steps:
     - uses: actions/checkout@v4
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-
-    - name: Use lowercase repository name as docker image name
-      run:
-        export REPOSITORY=${{ github.repository }}
-        echo "DOCKER_IMAGE_NAME=${REPOSITORY@L}" >> "$GITHUB_ENV"
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
         push: false
-        tags: ghcr.io/${{ env.DOCKER_IMAGE_NAME }}:latest
+        tags: ghcr.io/simenklemp/github-actions-workshop:latest
+        
