Changed push to true

--- a/internal/greeting/.github/workflows/build.yml
+++ b/internal/greeting/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        push: false
+        push: true
         tags: ghcr.io/simenklemp/github-actions-workshop:latest
         
