--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 # The "display name", shown in the GitHub UI
-name: Build and test
+name: Build go app and test
 
 # Trigger, run on push on any branch
 on:
@@ -27,6 +27,26 @@ jobs:
             
             - name: Test
               run: go test ./...
+
+
+  lint: 
+    name: Verify formatting
+    runs-on: "ubuntu-latest"
+    steps: 
+            # Checkout code
+      - uses: actions/checkout@v4
+
+            # Install go 1.21
+      - name: Setup go
+        uses: actions/setup-go@v4
+        with: # Specify input variables to the action
+          go-version: '1.21.x'
+      - run: |
+          no_unformatted_files="$(gofmt -l $(git ls-files '*.go') | wc -l)" 
+          exit "$no_unformatted_files"
+
+
+    
 
 
             
